--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,4 +1,5 @@
 .container {
+  position: relative;
   height: 100vh;
   display: flex;
   justify-content: flex-start;
@@ -7,15 +8,14 @@
 }
 
 .content {
-  border: 1px solid yellow;
   display: flex;
   flex-direction: column;
-  margin-left: 120px;
+  margin-left: 15rem;
 }
 
 .greeting {
   color: white;
-  font-size: 3rem;
+  font-size: 5rem;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -29,10 +29,16 @@
 
 .greetingChild > span {
   font-weight: bold;
-  animation: move-text 0.75s forwards;
 }
 
 .greetingChild > span:hover {
   color: #08fdd8;
   cursor: default;
+}
+
+.title {
+  display: flex;
+  color: grey;
+  font-size: 2rem;
+  margin: 3rem 0;
 }
