--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -42,3 +42,23 @@
   font-size: 2rem;
   margin: 3rem 0;
 }
+
+@media screen and (max-width: 760px) {
+  .content {
+    margin-left: 3rem;
+  }
+
+  .greeting {
+    font-size: 4rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .content {
+    margin-left: 1rem;
+  }
+
+  .greeting {
+    font-size: 3rem;
+  }
+}
