--- a/src/pages/About/About.module.css
+++ b/src/pages/About/About.module.css
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   margin-left: 15rem;
-  margin-top: 5rem;
+  margin-top: 3rem;
 }
 
 .title {
@@ -27,11 +27,25 @@
   color: white;
   font-size: 1.5rem;
   margin-top: 3rem;
-  width: 50vw;
+  width: 60vw;
 }
 
 .textContainer > p {
   margin: 2rem 1rem;
+}
+
+.githubContainer {
+  margin: 2rem 1rem;
+  font-size: 5rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.githubContainer > a {
+  text-decoration: none;
+  color: #08fdd8;
+  margin-right: 3rem;
 }
 
 @media screen and (max-width: 760px) {
@@ -43,6 +57,10 @@
   .textContainer {
     margin-top: 1rem;
     width: 100%;
+  }
+
+  .textContainer > p {
+    margin: 1rem 1rem;
   }
 }
 
