--- a/src/pages/Projects/sections/Tabs.module.css
+++ b/src/pages/Projects/sections/Tabs.module.css
@@ -1,7 +1,17 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  margin-top: 1rem;
+}
+
 .tabsContainer {
   display: flex;
   border-bottom: 1px solid #08fdd8;
   margin-top: 2rem;
+  width: 80vw;
 }
 
 .tabsContainer > div {
@@ -23,8 +33,8 @@
   background-color: #08fdd8;
 }
 
-.projectCardContainer {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 1rem;
+@media screen and (max-width: 760px) {
+  .tabsContainer > div {
+    font-size: 1rem;
+  }
 }
