--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -1,6 +1,7 @@
 .container {
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   background-color: #262626;
@@ -11,6 +12,7 @@
   flex-direction: column;
   margin-left: 15rem;
   margin-top: 3rem;
+  margin-right: 3rem;
   flex: 1.5;
 }
 
@@ -40,36 +42,27 @@
 }
 
 @media screen and (max-width: 760px) {
-  .container {
-    flex-direction: column;
-  }
-
   .content {
     margin-left: 3rem;
     margin-top: 10rem;
+    margin-right: 3rem;
   }
 
-  .textContainer {
-    margin-top: 1rem;
-    width: 100%;
+  .title {
+    font-size: 3rem;
   }
 
-  .textContainer > p {
-    margin: 1rem 1rem;
+  .blurb {
+    margin: 1rem 0;
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 }
 
 @media screen and (max-width: 480px) {
   .content {
-    margin-left: 1rem;
-  }
-
-  .title {
-    font-size: 3.5rem;
-  }
-
-  .textContainer {
-    font-size: 1.2rem;
-    margin-top: 1rem;
+    margin-left: 2rem;
+    margin-top: 10rem;
+    margin-right: 2rem;
   }
 }
