--- a/src/pages/Contact/sections/Form.module.css
+++ b/src/pages/Contact/sections/Form.module.css
@@ -12,7 +12,7 @@
 
 .inputContainer {
   width: 100%;
-  margin: 0.2rem 0.1rem;
+  margin: 0.2rem 0.2rem;
 }
 
 .input {
@@ -20,9 +20,9 @@
   border: 0;
   background: #363636;
   height: 5rem;
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: #8d8d8d;
-  padding: 0 1rem;
+  padding: 0rem 1rem;
   box-sizing: border-box;
 }
 
@@ -35,7 +35,7 @@
   width: 100%;
   border: 0;
   background: #363636;
-  font-size: 2rem;
+  font-size: 1.5rem;
   height: 10rem;
   color: #8d8d8d;
   padding: 1rem 1rem;
@@ -75,4 +75,32 @@
   height: 5rem;
   cursor: wait;
   margin-top: 2rem;
+}
+
+@media screen and (max-width: 760px) {
+  .input {
+    width: 100%;
+    height: 3rem;
+    font-size: 1.2rem;
+  }
+
+  .message {
+    width: 100%;
+    height: 6rem;
+    font-size: 1.2rem;
+  }
+
+  .submitButton {
+    font-size: 1.5rem;
+    height: 3rem;
+    margin-top: 1rem;
+  }
+
+  .loading {
+    height: 3rem;
+    margin-top: 1rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
 }
